# Cookpad-Search

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
api/: API_model.py  main.py  model.py
api/best_model/: README.md  config.json  config_sentence_transformers.json  tokenizer_config.json
templates/: inidex.html  results.html
