[tool.poetry]
name = "search-app"
version = "0.1.0"
description = "cockpad-search"
authors = ["Yosuke Horio"]
readme = "README.md"
packages = [{include = "search_app"}]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
torch = "2.0.1"
fugashi = "1.2.1"
ipadic = "1.0.0"
sentencepiece = "0.1.99"
sentence-transformers = "2.2.2"
pandas = "1.5.3"
pinecone-client = "2.2.2"
tqdm = "^4.65.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "0.95.1"
jinja2 = "^3.1.2"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
